2011-09-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* imfs_support/fs_supprot.h, support/fstest.h,
	support/ramdisk_support.h: Don't include config.h.
	* fserror/test.c, fslink/test.c, fspatheval/test.c,
	fspermission/test.c, fsrdwr/init.c, fssymlink/test.c,
	fstime/test.c, support/fstest_support.c, support/ramdisk_support.c:
	Add config-header support.
	* support/fstest.h: Include "pmacros.h".
	* fserror/fserror.doc, fserror/test.c, fslink/fslink.doc,
	fslink/test.c, fspatheval/patheval.doc, fspatheval/test.c,
	fspermission/fspermission.doc, fspermission/test.c,
	fsrdwr/fsrdwr.doc, fsrdwr/init.c, fssymlink/fssymlink.doc,
	fssymlink/test.c, fstime/fstime.doc, fstime/test.c,
	imfs_support/fs_config.h, imfs_support/fs_support.c,
	imfs_support/fs_supprot.h, mdosfs_support/fs_config.h,
	mdosfs_support/fs_support.c, mimfs_support/fs_config.h,
	mimfs_support/fs_support.c, mrfs_support/fs_config.h,
	mrfs_support/fs_support.c, support/fstest.h,
	support/fstest_support.c, support/fstest_support.h,
	support/ramdisk_support.c, support/ramdisk_support.h:
	Fix CVS-Ids.

2011-08-02	Xiang Cui <medivhc@gmail.com>

	* configure.ac, fserror/test.c, fslink/test.c, fspermission/test.c,
	fsrdwr/init.c, fssymlink/test.c, fstime/test.c,
	mdosfs_support/fs_config.h, mdosfs_support/fs_support.c,
	mimfs_support/fs_support.c, mrfs_support/fs_config.h,
	support/fstest.h, support/fstest_support.c,
	support/ramdisk_support.c, support/ramdisk_support.h: Perform first
	phase of clean up.

2011-08-01	Xiang Cui <medivhc@gmail.com>

	* imfs_fslink/Makefile.am, imfs_fssymlink/Makefile.am,
	mimfs_fslink/Makefile.am, mimfs_fssymlink/Makefile.am,
	mrfs_fslink/Makefile.am, mrfs_fssymlink/Makefile.am,
	mrfs_support/fs_config.h: Correcting from previous commit of
	incorrect tarball.
	* fserror/fserror.doc, fserror/test.c, fspatheval/patheval.doc,
	fspatheval/test.c, fspermission/fspermission.doc,
	fspermission/test.c, fsrdwr/fsrdwr.doc, fsrdwr/init.c,